# social_simming

./: .env  README.md  main.py  pyproject.toml
src/child_behaviour/: config.ini  create_persons.ipynb
src/child_behaviour/persons/: boyfriend.json  child.json  mom.json
src/child_behaviour/temp/: child_baseline1.ipynb
src/examples/: create_ad_for_appartment.ipynb
