[project]
name = "social-simming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.0",
    "tinytroupe",
]

[tool.uv.sources]
tinytroupe = { git = "https://github.com/microsoft/TinyTroupe.git", rev = "main" }
